# context-swap

./: .hlint.yaml  CHANGELOG.md  README.md  context-swap.cabal
app/: Main.hs
app/App/: Monad.hs  Options.hs
src/Data/: UUID.hs
src/System/: Hibernate.hs
src/System/Boot/: UEFI.hs
src/System/Boot/UEFI/: Internal.hs
src/System/Boot/UEFI/Internal/: Ioctl.chs
src/System/Boot/UEFI/Internal/Ioctl/: TH.hs
